fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -250,7 +250,7 @@ body {
 	font-family: 'Verdana', sans-serif;
   margin: 0;
 
-  /* overflow: auto; */
+  overflow: hidden;
   /* height: 100%; */
 }
 
